sondages/log/wiki.log
  File "/home/ubuntu/Elections/sondages/sondages_wiki_scrap.py", line 225
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
